--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
+/* universal style */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* body style */
 body {
     background-color: #d9dcd6;
 }
 
+/* header style */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,6 +27,7 @@ body {
     color: #d9dcd6;
 }
 
+/* nav style */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -50,6 +54,7 @@ p {
     font-size: 16px;
 }
 
+/* hero style */
 .hero {
     height: 800px;
     width: 100%;
@@ -59,6 +64,7 @@ p {
     background-position: center;
 }
 
+/* main content style */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -75,6 +81,7 @@ p {
     margin-left: 20px;
 }
 
+/* benefits style */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -102,6 +109,7 @@ p {
     max-width: 150px;
 }
 
+/* main sections style */
 .search-engine-optimization, .online-reputation-management, .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -120,6 +128,7 @@ p {
     font-size: 36px;
 }
 
+/* footer style */
 .footer {
     padding: 30px;
     clear: both;
